--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,8 +459,8 @@ Navbar Area Style
   position: sticky;
   -webkit-animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
           animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
-  -webkit-box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
-          box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 0 20px 9px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 0 20px 9px rgba(0, 0, 0, 0.05);
 }
 
 .navbar-area .container-fluid {
@@ -1241,7 +1241,7 @@ Banner Area Style
 }
 
 .banner-area.bg-4 {
-  background-image: url(../images/banner/bg-4.jpg);
+  background-image: url(../images/banner/bg-1.png);
 }
 
 .banner-area .container-fluid {
