--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3331,9 +3331,9 @@
                         width: 35px;
                         height: 30px;
                         padding-top: 5px;
-                        color: #0cb8b6;
+                        color: #005fb0;
                         span {
-                            background: #0cb8b6;
+                            background: #005fb0;
                             height: 4px;
                             margin-top: -6px;
                             border-radius: 0;
