--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3291,7 +3291,7 @@
                                     };
                                 }
                                 &.active {
-                                    color: #0cb8b6 !important;
+                                    color: #005fb0 !important;
                                 }
                             }
                             li {
@@ -3333,7 +3333,7 @@
                         padding-top: 5px;
                         color: #005fb0;
                         span {
-                            background: #005fb0;
+                            background: #005fb0 !important;
                             height: 4px;
                             margin-top: -6px;
                             border-radius: 0;
