--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5469,7 +5469,7 @@ Go To Top Style
 }
 /*for Demo Only*/
 .demo-row {
-  background-color: #005fb0;
+  /* background-color: #005fb0; */
   padding: 50px 0;
 }
 
