--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3331,7 +3331,7 @@
                         width: 35px;
                         height: 30px;
                         padding-top: 5px;
-                        color: #005fb0;
+                        color: #005fb0 !important;
                         span {
                             background: #005fb0 !important;
                             height: 4px;
