--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4903,7 +4903,7 @@ Page Header Area Style
 }
 
 .page-banner.bg-1 {
-  background-image: url(../images/page-header/page-header-bg.jpg);
+  background-image: url(../images/page-header/page-header-bg.png);
 }
 
 .page-banner-content h1 {
