--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1071,18 +1071,18 @@ Preloader Style
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(76, 6, 238);
+  background: #005fb0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .loader > img {
-  width: 100px;
+  width: 300px;
 }
 
 .loader.hidden {
-  animation: fadeOut 10s;
+  animation: fadeOut 1000s;
   animation-fill-mode: forwards;
 }
 
@@ -1093,147 +1093,8 @@ Preloader Style
   }
 }
 
-.thumb {
-  height: 100px;
-  border: 1px solid rgb(255, 255, 255);
-  margin: 10px;
-}
-/* .preloader-area {
-  position: fixed;
-  z-index: 999999;
-  background-color: #005fb0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  left: 0;
-  right: 0;
-  top: 0;
-}
-.preloader-area .spinner {
-  width: 4em;
-  height: 4em;
-  -webkit-transform: perspective(20em) rotateX(-24deg) rotateY(20deg) rotateZ(30deg);
-          transform: perspective(20em) rotateX(-24deg) rotateY(20deg) rotateZ(30deg);
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 45%;
-  -webkit-transform: translateY(-45%);
-          transform: translateY(-45%);
-  margin-left: auto;
-  margin-right: auto;
-}
-.preloader-area .spinner .inner {
-  width: 100%;
-  height: 100%;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-animation: sphereSpin 6s linear infinite;
-          animation: sphereSpin 6s linear infinite;
-}
 
-.preloader-area .spinner::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  border-radius: 50%;
-  right: 0;
-  bottom: 0;
-  border: 2px dotted #ffffff;
-  margin: -15px;
-}
 
-@-webkit-keyframes sphereSpin {
-  0% {
-    -webkit-transform: rotateX(360deg) rotateY(0deg);
-            transform: rotateX(360deg) rotateY(0deg);
-  }
-  100% {
-    -webkit-transform: rotateX(0deg) rotateY(360deg);
-            transform: rotateX(0deg) rotateY(360deg);
-  }
-}
-
-@keyframes sphereSpin {
-  0% {
-    -webkit-transform: rotateX(360deg) rotateY(0deg);
-            transform: rotateX(360deg) rotateY(0deg);
-  }
-  100% {
-    -webkit-transform: rotateX(0deg) rotateY(360deg);
-            transform: rotateX(0deg) rotateY(360deg);
-  }
-}
-
-@-webkit-keyframes rotate {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@keyframes rotate {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes rotateDisc2 {
-  from {
-    -webkit-transform: rotateX(90deg) rotateZ(0deg);
-            transform: rotateX(90deg) rotateZ(0deg);
-  }
-  to {
-    -webkit-transform: rotateX(90deg) rotateZ(360deg);
-            transform: rotateX(90deg) rotateZ(360deg);
-  }
-}
-
-@keyframes rotateDisc2 {
-  from {
-    -webkit-transform: rotateX(90deg) rotateZ(0deg);
-            transform: rotateX(90deg) rotateZ(0deg);
-  }
-  to {
-    -webkit-transform: rotateX(90deg) rotateZ(360deg);
-            transform: rotateX(90deg) rotateZ(360deg);
-  }
-}
-
-@-webkit-keyframes rotateDisc3 {
-  from {
-    -webkit-transform: rotateY(90deg) rotateZ(0deg);
-            transform: rotateY(90deg) rotateZ(0deg);
-  }
-  to {
-    -webkit-transform: rotateY(90deg) rotateZ(360deg);
-            transform: rotateY(90deg) rotateZ(360deg);
-  }
-}
-
-@keyframes rotateDisc3 {
-  from {
-    -webkit-transform: rotateY(90deg) rotateZ(0deg);
-            transform: rotateY(90deg) rotateZ(0deg);
-  }
-  to {
-    -webkit-transform: rotateY(90deg) rotateZ(360deg);
-            transform: rotateY(90deg) rotateZ(360deg);
-  }
-} */
-/*  */
 
 /*
 Banner Area Style
