--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3333,7 +3333,7 @@
                         padding-top: 5px;
                         color: #005fb0 !important;
                         span {
-                            background: #015aa7 !important;
+                            background: #005fb0 !important;
                             height: 4px;
                             margin-top: -6px;
                             border-radius: 0;
