--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -3229,7 +3229,7 @@
 /* Mobile and iPad Navbar */
 @media only screen and (max-width: 991px) {
     .navbar-area {
-        background-color: #ffffff;
+        background-color:  #005fb0;
         box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         z-index: 2;
         padding: {
